# honours

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  docs.md
src/: CMakeLists.txt  clerk_session.cpp  clerk_session.hpp  client.cpp  client.hpp  course.cpp  course.hpp  message.cpp  message.hpp  server.cpp  server.hpp  session.cpp  session.hpp  student.cpp  student.hpp  student_session.cpp  student_session.hpp  temporary_session.cpp  temporary_session.hpp  university.cpp  university.hpp  util.hpp
src/networking/: CMakeLists.txt
src/networking/client/: CMakeLists.txt  client.cpp  client.hpp  run_client.cpp
src/networking/message/: CMakeLists.txt  message.cpp  message.hpp
src/networking/server/: CMakeLists.txt  run_server.cpp  server.cpp  server.hpp
src/networking/server/session/: clerk_session.cpp  clerk_session.hpp  session.hpp  student_session.cpp  student_session.hpp  temporary_session.cpp  temporary_session.hpp
src/university/: CMakeLists.txt  course.cpp  course.hpp  result_types.hpp  state_change_timer_task.hpp  student.cpp  student.hpp  university.cpp  university.hpp
src/utility/: CMakeLists.txt  util.cpp  util.hpp
test/: CMakeLists.txt
test/doctest/: CMakeLists.txt  test_runner.cpp
test/doctest/native/: CMakeLists.txt
test/doctest/native/scenarios/: create_course.cpp  create_student.cpp  delete_course.cpp  delete_student.cpp  deregister_from_course.cpp  drop_course.cpp  ex1.cpp  login_logout.cpp  register_in_course.cpp  scenario_context.hpp  step_definitions.cpp  step_definitions.hpp
test/doctest/scenarios/: create_course.cpp  create_student.cpp  delete_course.cpp  delete_student.cpp  deregister_from_course.cpp  drop_course.cpp  login.cpp  login_logout.cpp  register_in_course.cpp  scenario_context.hpp  step_definitions.cpp  step_definitions.hpp
test/doctest/scenarios/native/: ex1.cpp  ex2.cpp
test/doctest/scenarios/parallel/: ex1.cpp  ex2.cpp
test/native/: CMakeLists.txt
test/native/scenarios/: register_in_course.cpp
